<resources>
    <string name="app_name">Movie Application</string>
    <string name="movie_category">Movie Category</string>
    <string name="movie_duration">Movie Duration</string>
    <string name="trending">Trending</string>
    <string name="home">Home</string>
    <string name="search_movie">Search Movie</string>
    <string name="best_movies">Best Movies</string>
    <string name="category">Category</string>
    <string name="now_playing">Now Playing</string>
    <string name="title_search">Search</string>
    <string name="title_tv_shows">TV Shows</string>
    <string name="title_movies">Movies</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>