<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginTop="14dp"
    android:layout_marginEnd="10dp"
    android:layout_marginBottom="14dp"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_movie_poster"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:src="@drawable/logo"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_movie_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="100">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="90"
                android:textSize="14sp"
                android:id="@+id/movie_category"
                android:text="@string/movie_category"
                android:gravity="start"/>
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:textSize="14sp"
                android:text="@string/movie_duration"
                android:id="@+id/movie_duration"
                android:gravity="center"/>

        </LinearLayout>

        <TextView
            android:id="@+id/rating_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Ratings"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_movie_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="5.9"
            android:textColor="@android:color/holo_red_light"
            android:textSize="14sp" />

        <RatingBar
            android:id="@+id/movie_rating_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="10dp"
            android:numStars="5"
            android:padding="3dp" />
    </LinearLayout>

</androidx.cardview.widget.CardView>