<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".MovieListActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/search_view_edit_text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="14dp"
                android:background="@drawable/edittext_background"
                android:drawableStart="@drawable/baseline_search"
                android:drawableTint="@color/light_blue"
                android:ems="2"
                android:hint="@string/search_movie"
                android:inputType="text"
                android:padding="12dp"
                android:textColorHint="#ACACBF" />
            
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp">
                
                <androidx.viewpager2.widget.ViewPager2
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"/>
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/best_movies"
                android:textColor="@color/light_grey"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="24dp"/>
            
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                
                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/movies_recycler_view"/>

                <ProgressBar
                    android:id="@+id/progress_circular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"/>
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textColor="@color/light_grey"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="24dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/category_recycler_view"/>

                <ProgressBar
                    android:id="@+id/category_progress_circular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"/>
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>


</RelativeLayout>